@@ -39,6 +39,7 @@ Version 1.3.1+svn:
    * remove some old backward compatibility support
  * user interface:
    * new sounds for user interface events
+   * added the option to show warnings about deprecated WML usage
  * misceleanous bug fixes
    * an friendly healer hill now stop poisoned unit to lose HP
    * a unit that dies while attacking will now correctly play it's own death
